kubeflow/contrib/kserve/models-web-app/upstream/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # kpt-merge: kserve/kserve-models-web-app
  name: kserve-models-web-app
  namespace: kserve
  annotations:
    internal.kpt.dev/upstream-identifier: 'apps|Deployment|kserve|kserve-models-web-app'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: kserve-models-web-app
  template:
    metadata:
      labels:
        app.kubernetes.io/component: kserve-models-web-app
    spec:
      containers:
      - image: kserve/models-web-app:latest
        imagePullPolicy: Always
        name: kserve-models-web-app
        ports:
        - containerPort: 5000
          name: http
        livenessProbe:
          httpGet:
            path: /healthz/liveness
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /healthz/readiness
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
          successThreshold: 1
      serviceAccountName: kserve-models-web-app
