kubeflow/contrib/kserve/models-web-app/upstream/base/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata: # kpt-merge: kserve/kserve-models-web-app
  name: kserve-models-web-app
  namespace: kserve
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.istio.io|VirtualService|kserve|kserve-models-web-app'
spec:
  gateways:
  - knative-serving/knative-ingress-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /kserve-endpoints/
    rewrite:
      uri: /
    route:
    - destination:
        host: kserve-models-web-app.kserve.svc.cluster.local
        port:
          number: 80
